# RustNeuralNetwork

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
MNIST/: main.py
src/: lib.rs
