[package]
name = "RustNeuralNetwork"
version = "0.1.0"
authors = ["Shay Green <shagreen@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
stringutils = "0.0.3"
ndarray = "^0.15.0"
csv = "^1.1"
image = "^0.23.14"


